--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		</header>
 		<main>
-         <label><h2>Set the date you are counting down:</h2></label>
+         <label><h2>Set the date you are counting down to:</h2></label>
          <div></div><input type="date" 
             id="countDown" placeholder="dd-mm-yyyy" min="1890-01-01" max="3000-12-31"><br><br></div>
 			<input type="button" button style="height:30px;width:70px"  onclick="showTime()" value="submit">
